# my-first-repo

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  breakout  cmake_install.cmake  config.json  leaderboard.txt  main.c
Testing/Temporary/: CTestCostData.txt
include/: Game.h
src/: ## GitHub Copilot Chat.md  Game.cpp
tests/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_logic  test_logic.cpp
